# isp-proj

./: CMakeLists.txt  README.md  build.sh  config.ini  test.py
include/: confini.cpp  confini.hpp  isp_cuda_func.cu  isp_cuda_func.hpp  isp_pipeline.cpp  isp_pipeline.hpp  utils.cpp  utils.hpp
src/: isp.cpp  isp_cl.cpp
